<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white"
    android:paddingHorizontal="12dp"
    android:paddingVertical="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="220dp"
        android:minHeight="220dp"
        android:src="@drawable/icon_confirmation"
        android:contentDescription="@string/confirmation_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#479DA8" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/your_order_is_confirmed"
        android:textColor="@color/blue_800"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:text="@string/thank_you_for_your_purchase"
        android:textAlignment="center"
        android:textColor="@color/blue_800"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finishButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="100dp"
        android:text="@string/close"
        android:textColor="@color/blue_800"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
        app:strokeColor="@color/blue_800"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_blue"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/movie_name"
            android:textAlignment="center"
            android:textColor="@color/white_500"
            android:textSize="28sp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            app:dividerColor="@color/white_500"
            app:dividerThickness="2dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@color/light_blue_200"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/theater"
                android:textAlignment="center"
                android:textColor="@color/light_blue_200"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tickets"
                android:textAlignment="center"
                android:textColor="@color/light_blue_200"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/confirmedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/selected_date"
                android:textAlignment="center"
                android:textColor="@color/white_500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/confirmedTheater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/selected_theater"
                android:textAlignment="center"
                android:textColor="@color/white_500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/confirmedTickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/selected_tickets"
                android:textAlignment="center"
                android:textColor="@color/white_500"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>