<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:background="@drawable/bg_white">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_theater"
        android:textSize="34sp"
        android:textStyle="normal"
        android:textColor="@color/blue_800"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/theaterDialogCancelBtn"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:minHeight="48dp"
            android:text="@string/tel_aviv"
            android:textColor="@color/blue_800"
            android:textSize="22sp"
            android:theme="@style/MyRadioButton" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:minHeight="48dp"
            android:text="@string/haifa"
            android:textColor="@color/blue_800"
            android:textSize="22sp"
            android:theme="@style/MyRadioButton" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:minHeight="48dp"
            android:text="@string/jerusalem"
            android:textColor="@color/blue_800"
            android:textSize="22sp"
            android:theme="@style/MyRadioButton" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:minHeight="48dp"
            android:text="@string/beer_sheva"
            android:textColor="@color/blue_800"
            android:textSize="22sp"
            android:theme="@style/MyRadioButton" />
    </RadioGroup>

    <Button
        android:id="@+id/theaterDialogCancelBtn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancellation"
        android:textColor="@color/blue_300"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/theaterDialogOKBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/theaterDialogOKBtn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation"
        android:textColor="@color/blue_300"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/theaterDialogCancelBtn"
        app:layout_constraintTop_toTopOf="@+id/theaterDialogCancelBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>