<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_blue"
    android:minHeight="500dp"
    android:paddingHorizontal="12dp"
    android:paddingVertical="16dp"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="100dp">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:includeFontPadding="false"
        android:text="@string/order_details"
        android:textColor="#D6D8DA"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/bg_white"
        android:minHeight="260dp"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:fontFamily="@font/poppins"
            android:text="@string/child_tickets"
            android:textColor="@color/blue_300"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toStartOf="@+id/childTicketsTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/theaterTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:text="@string/theater"
            android:textColor="@color/blue_300"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:fontFamily="@font/poppins"
            android:text="@string/theater"
            android:textColor="@color/blue_300"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toStartOf="@+id/theaterTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:fontFamily="@font/poppins"
            android:text="@string/date"
            android:textColor="@color/blue_300"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/dateTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textColor="@color/blue_300"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.428" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:fontFamily="@font/poppins"
            android:text="@string/adult_tickets"
            android:textColor="@color/blue_300"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toStartOf="@+id/adultTicketsTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/childTicketsTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:text="@string/_0"
            android:textColor="@color/blue_300"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/adultTicketsTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:text="@string/_0"
            android:textColor="@color/blue_300"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginVertical="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/totalPriceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/_0"
            android:textColor="@color/blue_800"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/total_price"
            android:textColor="@color/blue_800"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/totalPriceTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:includeFontPadding="false"
        android:minHeight="54dp"
        android:text="@string/cancel"
        android:textColor="@color/white_500"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        app:strokeColor="@color/white_500"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmBtn"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins_semibold"
        android:includeFontPadding="false"
        android:minHeight="54dp"
        android:text="@string/confirm"
        android:textColor="@color/blue_800"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/cancelBtn"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />

</androidx.constraintlayout.widget.ConstraintLayout>